obtener articulos de un folio en el modulo de consultar rentas